--- a/src/Components/Navbar/Styles/Nav.css
+++ b/src/Components/Navbar/Styles/Nav.css
@@ -10,4 +10,16 @@
     padding-left: 3%;
     color: #EB4334;
     font-family: Baskerville Old Face;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+@media screen and (max-height: 600px) {
+    .navbar {
+      height: 80%;
+    }
 }
