--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,9 @@
   height: 100vh;
   /* background-color: yellow; */
 }
+
+@media screen and (max-width: 700px) {
+  .App {
+    height: 95vh;
+  }
+}
