--- a/src/Components/Body/Styles/Body.css
+++ b/src/Components/Body/Styles/Body.css
@@ -22,22 +22,30 @@
 }
 
 .refreshDiv {
+    all: unset;
     display: flex;
-    width: 6%;
-    height: 5%;
+    width: 120px;
+    height: 40px;
     padding: 5px 10px;
     cursor: pointer;
     /* background-color: yellow; */
-    justify-content: space-around;
+    /* justify-content: space-around; */
     align-items: center;
 }
 
 .refreshIcon {
-    width: 20px;
-    height: 20px;
+    width: 25px;
+    height: 25px;
+    padding-right: 5px;
 }
 
 .refreshText {
     font-weight: 500;
     color: #0A56D0;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
