--- a/src/Components/Navbar/Styles/Nav.css
+++ b/src/Components/Navbar/Styles/Nav.css
@@ -2,8 +2,9 @@
     display: flex;
     width: 100%;
     height: 100%;
-    /* background-color: blue; */
+    background-color: white;
     box-shadow: 2px 2px 10px #999da0;
+    z-index: 1;
 }
 
 .navTitle {
