--- a/src/Components/Body/Styles/Body.css
+++ b/src/Components/Body/Styles/Body.css
@@ -12,14 +12,17 @@
     display: flex;
     flex-direction: column;
     overflow: auto;
+    width: auto;
     gap: 7px;
     width: 95%;
+    padding-top: 20px;
 }
 
 .message {
     background-color: #EEEEF1;
     padding: 5px 10px;
     border-radius: 4px;
+    width: auto;
 }
 
 .refreshDiv {
